samples/_failures_safe/1761723484_51b882_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb2432c2.c: In function ‘main’:
./samples/SAFE/__tmp_eb2432c2.c:157:40: error: expected ‘)’ at end of input
  157 |                 } else if (status == -1
      |                           ~            ^
      |                                        )
./samples/SAFE/__tmp_eb2432c2.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else if (status == -1
      |                 ^
./samples/SAFE/__tmp_eb2432c2.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb2432c2.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb2432c2.c:157:17: error: expected declaration or statement at end of input
